--- a/src/app/fanshop/fanshop.component.html
+++ b/src/app/fanshop/fanshop.component.html
@@ -18,85 +18,87 @@
   </p>
 
   <!-- <p class="small">
-    Als Dankeschön bieten wir unseren treuen Vereinsmitgliedern einen Rabatt von 15 % auf alle Artikel an!
-  </p> -->
+  Als Dankeschön bieten wir unseren treuen Vereinsmitgliedern einen Rabatt von 15 % auf alle Artikel an!
+</p> -->
 
-  <!--
-  <h2 style="text-align: center; padding-left: 10px; padding-right: 10px;">
-    Weihnachtsspecial! Schlage jetzt zu in unserem Fanshop und erhalte bis Weihnachten 15 % Rabatt auf alle Artikel!
-  </h2>
+<!--
+<h2 style="text-align: center; padding-left: 10px; padding-right: 10px;">
+  Weihnachtsspecial! Schlage jetzt zu in unserem Fanshop und erhalte bis Weihnachten 15 % Rabatt auf alle Artikel!
+</h2>
 
 
-  <br>
+<br>
 
   <img class="centerWithoutWidth" src="/assets/images/xmas.jpeg" width="20%" *ngIf="!isMobile">
   <img class="center" src="/assets/images/xmas.jpeg" width="20%" *ngIf="isMobile">
 
   <br>
-  -->
+    -->
 
-  <p class="small">
-    Folgende Artikel stehen zur Auswahl:
+    <p class="small">
+      Folgende Artikel stehen zur Auswahl:
+      <br />
+      (bestellen ganz einfach mit einer Nachricht an unsere Facebookseite oder E-Mail Adresse)
+    </p>
+
     <br />
-    (bestellen ganz einfach mit einer Nachricht an unsere Facebookseite oder E-Mail Adresse)
-  </p>
+
+    <div fxFlex>
+      <mat-grid-list cols="{{ gridColumns }}" rowHeight="600px">
+        @for (item of items; track item) {
+          <mat-grid-tile appHighlight>
+            <img
+              class="fanshopImg"
+              [style.height.px]="gridImageHeight"
+              src="{{ imageBaseUrl + item.imagePath }}"
+              alt="{{ item.name }}"
+              />
+            <mat-grid-tile-header style="margin-top: 30px">
+              <h1 mat-line [style.font-size.em]="titleSizeEm">{{ item.name | uppercase }}</h1>
+              <h2 mat-line style="text-align: right" [style.font-size.em]="priceSizeEm">
+                {{ item.price }}
+              </h2>
+            </mat-grid-tile-header>
+            @if (isMobile) {
+              <mat-grid-tile-footer
+                [style.font-size.em]="detailSizeEm"
+                style="text-align: center; min-height: 220px; height: auto"
+                >
+                {{ item.description }}
+                &nbsp;
+                <a
+                  md-icon-button
+                  class="btn-mail"
+            href="mailto:hvtdpstainz@gmx.at?subject=Bestellung {{ item.name }}&body={{
+              item.description
+            }} Bitte um Angabe von Anzahl und Größe."
+                  >
+                  <i class="fa fa-envelope"> jetzt bestellen!</i>
+                </a>
+              </mat-grid-tile-footer>
+            }
+            @if (!isMobile) {
+              <mat-grid-tile-footer
+                [style.font-size.em]="detailSizeEm"
+                style="text-align: center; min-height: 110px; height: auto"
+                >
+                {{ item.description }}
+                &nbsp;
+                <a
+                  md-icon-button
+                  class="btn-mail"
+            href="mailto:hvtdpstainz@gmx.at?subject=Bestellung {{ item.name }}&body={{
+              item.description
+            }} Bitte um Angabe von Anzahl und Größe."
+                  >
+                  <i class="fa fa-envelope"> jetzt bestellen!</i>
+                </a>
+              </mat-grid-tile-footer>
+            }
+          </mat-grid-tile>
+        }
+      </mat-grid-list>
+    </div>
+  </div>
 
   <br />
-
-  <div fxFlex>
-    <mat-grid-list cols="{{ gridColumns }}" rowHeight="600px">
-      <mat-grid-tile *ngFor="let item of items" appHighlight>
-        <img
-          class="fanshopImg"
-          [style.height.px]="gridImageHeight"
-          src="{{ imageBaseUrl + item.imagePath }}"
-          alt="{{ item.name }}"
-        />
-        <mat-grid-tile-header style="margin-top: 30px">
-          <h1 mat-line [style.font-size.em]="titleSizeEm">{{ item.name | uppercase }}</h1>
-          <h2 mat-line style="text-align: right" [style.font-size.em]="priceSizeEm">
-            {{ item.price }}
-          </h2>
-        </mat-grid-tile-header>
-
-        <mat-grid-tile-footer
-          *ngIf="isMobile"
-          [style.font-size.em]="detailSizeEm"
-          style="text-align: center; min-height: 220px; height: auto"
-        >
-          {{ item.description }}
-          &nbsp;
-          <a
-            md-icon-button
-            class="btn-mail"
-            href="mailto:hvtdpstainz@gmx.at?subject=Bestellung {{ item.name }}&body={{
-              item.description
-            }} Bitte um Angabe von Anzahl und Größe."
-          >
-            <i class="fa fa-envelope"> jetzt bestellen!</i>
-          </a>
-        </mat-grid-tile-footer>
-
-        <mat-grid-tile-footer
-          *ngIf="!isMobile"
-          [style.font-size.em]="detailSizeEm"
-          style="text-align: center; min-height: 110px; height: auto"
-        >
-          {{ item.description }}
-          &nbsp;
-          <a
-            md-icon-button
-            class="btn-mail"
-            href="mailto:hvtdpstainz@gmx.at?subject=Bestellung {{ item.name }}&body={{
-              item.description
-            }} Bitte um Angabe von Anzahl und Größe."
-          >
-            <i class="fa fa-envelope"> jetzt bestellen!</i>
-          </a>
-        </mat-grid-tile-footer>
-      </mat-grid-tile>
-    </mat-grid-list>
-  </div>
-</div>
-
-<br />
