--- a/src/app/hallofpapp/hallofpapp.component.html
+++ b/src/app/hallofpapp/hallofpapp.component.html
@@ -15,30 +15,36 @@
 
 <div fxLayout="column">
   <mat-list>
-    <mat-list-item class="pappListImage" *ngFor="let pappfan of pappfans">
-      <img
-        matListAvatar
-        class="papp-preview"
-        src="{{ imageBaseUrl + pappfan.imagePath }}"
-        alt="{{ pappfan.name }}"
-      />
-      <br />
-      <table>
-        <tr>
-          <h4 class="text">Unterstützer:</h4>
-          <span *ngIf="pappfan.name.length > 25">
-            <h3 class="text" style="font-size: large; font-weight: bold; max-width: 100%">
-              {{ pappfan.name }}
-            </h3>
-          </span>
-          <span *ngIf="pappfan.name.length <= 25">
-            <h1 class="text" style="font-size: xx-large; font-weight: bold" matLine>
-              {{ pappfan.name }}
-            </h1>
-          </span>
-          <h4 class="text">copyright: Ligaportal.at</h4>
-        </tr>
-      </table>
-    </mat-list-item>
+    @for (pappfan of pappfans; track pappfan) {
+      <mat-list-item class="pappListImage">
+        <img
+          matListAvatar
+          class="papp-preview"
+          src="{{ imageBaseUrl + pappfan.imagePath }}"
+          alt="{{ pappfan.name }}"
+          />
+        <br />
+        <table>
+          <tr>
+            <h4 class="text">Unterstützer:</h4>
+            @if (pappfan.name.length > 25) {
+              <span>
+                <h3 class="text" style="font-size: large; font-weight: bold; max-width: 100%">
+                  {{ pappfan.name }}
+                </h3>
+              </span>
+            }
+            @if (pappfan.name.length <= 25) {
+              <span>
+                <h1 class="text" style="font-size: xx-large; font-weight: bold" matLine>
+                  {{ pappfan.name }}
+                </h1>
+              </span>
+            }
+            <h4 class="text">copyright: Ligaportal.at</h4>
+          </tr>
+        </table>
+      </mat-list-item>
+    }
   </mat-list>
 </div>
