--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,32 +1,33 @@
 <h1 class="large header">HV TDP News</h1>
 
 <mat-accordion>
-  <ng-container *ngFor="let newsItem of news">
-    <mat-expansion-panel
-      *ngIf="
-        news.indexOf(newsItem) >= this.pageEvent.pageIndex * this.pageEvent.pageSize &&
-        news.indexOf(newsItem) + 1 <= (this.pageEvent.pageIndex + 1) * this.pageEvent.pageSize
-      "
-      [expanded]="selectedNews != null && newsItem.newsId == selectedNews.newsId"
-      (opened)="opened()"
-    >
-      <mat-expansion-panel-header>
-        {{ newsItem.newsDate }} {{ newsItem.title }}
-      </mat-expansion-panel-header>
-
-      <app-hvtdp-image [imagePath]="imageBaseUrl + newsItem.imagePath"></app-hvtdp-image>
-
-      <p style="white-space: pre-line" *ngIf="newsItem.news">
-        {{ newsItem.news }}
-      </p>
-
-      <div
-        style="white-space: pre-line"
-        [innerHTML]="formatMessage(newsItem.htmlNews)"
-        *ngIf="newsItem.htmlNews"
-      ></div>
-    </mat-expansion-panel>
-  </ng-container>
+  @for (newsItem of news; track newsItem) {
+    @if (
+      news.indexOf(newsItem) >= this.pageEvent.pageIndex * this.pageEvent.pageSize &&
+      news.indexOf(newsItem) + 1 <= (this.pageEvent.pageIndex + 1) * this.pageEvent.pageSize
+      ) {
+      <mat-expansion-panel
+        [expanded]="selectedNews != null && newsItem.newsId == selectedNews.newsId"
+        (opened)="opened()"
+        >
+        <mat-expansion-panel-header>
+          {{ newsItem.newsDate }} {{ newsItem.title }}
+        </mat-expansion-panel-header>
+        <app-hvtdp-image [imagePath]="imageBaseUrl + newsItem.imagePath"></app-hvtdp-image>
+        @if (newsItem.news) {
+          <p style="white-space: pre-line">
+            {{ newsItem.news }}
+          </p>
+        }
+        @if (newsItem.htmlNews) {
+          <div
+            style="white-space: pre-line"
+            [innerHTML]="formatMessage(newsItem.htmlNews)"
+          ></div>
+        }
+      </mat-expansion-panel>
+    }
+  }
 </mat-accordion>
 
 <br />
@@ -36,5 +37,5 @@
   [pageSize]="pageSize"
   [pageSizeOptions]="pageSizeOptions"
   (page)="pageEvent = $event"
->
+  >
 </mat-paginator>
